--- a/Ch1_Degradation_abcoverNMDS.Rmd
+++ b/Ch1_Degradation_abcoverNMDS.Rmd
@@ -30,12 +30,14 @@ if (!require(devtools)) {
 devtools::install_github("gavinsimpson/ggvegan")
 ```
 
+# Load csv
+
 ```{r load csv}
 # percent cover
 abcover_full_raw <- read.csv("~/Dropbox/GRADSCHOOL/Dissertation/R_dissertation/chaparraldegradation_2022b/deg_percentcover_byspecies_bylifeform.csv", header = TRUE, na.strings=c("","NA"))
 ```
 
-(1) Organize the percent cover data by converting the dataframe into a tibble.
+### (1) Organize the percent cover data by converting the dataframe into a tibble.
 ```{r ab percent cover by status, include = TRUE}
 
 str(abcover_full_raw)
@@ -49,7 +51,7 @@ abcover_full_raw <- as_tibble(abcover_full_raw)
 class(abcover_full_raw) # now a tibble
 ```
 
-(2) Organize the percent cover data by reordering the classes: Intact, Matrix, Degraded.
+### (2) Organize the percent cover data by reordering the classes: Intact, Matrix, Degraded.
 ```{r ab percent cover reorder classes to Intact Matrix Degraded}
 abcover_full_v <- abcover_full_raw %>%
   mutate(standtype = fct_relevel(standtype, 
@@ -62,7 +64,7 @@ unique(abcover_full_v$standtype)
 
 ```
 
-(3) Create new columns for SITE_REP, SITE_REP_DISTANCE, and STAND_STATUS for the percent cover data. 
+### (3) Create new columns for SITE_REP, SITE_REP_DISTANCE, and STAND_STATUS for the percent cover data. 
 ```{r ab percent cover create site_rep column and site_rep_dist column}
 
 # combine site and rep to one column
@@ -78,16 +80,18 @@ abcover_full_v$stand_status <- paste(abcover_full_v$standtype, abcover_full_v$st
 abcover_full_v$site_rep_species <- paste(abcover_full_v$site_rep, abcover_full_v$species, sep="_") 
 
 head(abcover_full_v) # look at new columns
+glimpse( abcover_full_v)  
+unique(abcover_full_v$site)
 
 ```
 
-(4) Omit "ground" as a status since I'm interested in only Native and Non-native species.
+### (4) Omit "ground" as a status since I'm interested in only Native and Non-native species.
 ```{r ab percent cover filter for native and non-native only}
 abcover_full_v_omitground <- filter(abcover_full_v, status !="ground")
 head(abcover_full_v_omitground)
 ```
 
-(5) Identify the unique species at each site_rep_dist to get rid of duplicate species recordings. (e.g., Present at one distance = 1/41 to get percent cover) 
+### (5) Identify the unique species at each site_rep_dist to get rid of duplicate species recordings. (e.g., Present at one distance = 1/41 to get percent cover) 
 ```{r ab percent cover unby species, inclue = TRUE}
 
 abcover_byspecies <- abcover_full_v_omitground %>% 
@@ -103,11 +107,12 @@ head(abcover_byspecies) # prints to new tab
 
 unique(abcover_byspecies$standtype)
 unique(abcover_byspecies$site)
+unique(abcover_byspecies$site_rep)
 unique(abcover_byspecies$species)
 
 ```
 
-(6) Prepare data for an NMDS (percent cover x species x standtype)
+### (6) Prepare data for an NMDS (percent cover x species x standtype)
 ```{r transpose percent cover data by species, include=TRUE}
 
 # use this for GROUPS: abcover_byspecies_nmdsprep
@@ -132,15 +137,38 @@ view(abcover_byspecies_nmdsprep_num) # only numbers
 write.csv(abcover_byspecies_nmdsprep_num, "~/Dropbox/GRADSCHOOL/Dissertation/R_dissertation/chaparraldegradation_2022b/processed/nmds_aboveground.csv")
 ```
 
+### (7) Percent Cover
+```{r above ground percent cover, include=TRUE}
+
+above_percentcover <- abcover_full_v_omitground %>% 
+  group_by(standtype, site_rep, species, lifeform, status, family, lifecycle) %>% 
+  filter(site_rep != "Intact4_4") %>% #omit Intact 4 from data
+  filter(!is.na(species)) %>% # omit blank cells in species 
+  dplyr::summarize(count_per_dist = n_distinct(site_rep_dist), percentcover = n_distinct(site_rep_dist)/41) %>% 
+   select(!c(count_per_dist))
+  
+
+view(above_percentcover) # prints to new tab
+
+
+unique(abcover_byspecies$standtype)
+unique(abcover_byspecies$site)
+unique(abcover_byspecies$site_rep)
+unique(abcover_byspecies$species)
+
+```
+
+
+# Above ground species richness
 ```{r species richness by stand type}
 sppr <- specnumber(abcover_byspecies_nmdsprep_num)
 
-sppr_aov <- aov(sppr ~ standtype, data = abcover_byspecies_nmdsprep)
-summary(sppr_aov)
-
+summary(aov(sppr ~ standtype, data = abcover_byspecies_nmdsprep)) # by stand type
 #             Df Sum Sq Mean Sq F value Pr(>F)
 #standtype    2  17.40   8.700   1.921  0.189
 #Residuals   12  54.33   4.528
+
+summary(aov(sppr ~ site_rep, data = abcover_byspecies_nmdsprep)) # by stand type
 
 abcover_byspecies_nmdsprep <- abcover_byspecies_nmdsprep %>% 
   mutate(standtype_ID = 1)
